# excercises

./: .gitignore  excercise.blend  excercise.blend1  pyproject.toml
dev_scripts/: setup_blender.sh
src/: excercise2.py  excercise3_limit_pencil.py  excercise4.py  exercise1.py  exercise3.py  exercise5.py  exercise6.py  exercise7.py  exercise8.py  exercise8_2.py  first_steps.py  lines_through_quadric.py
