[project]
name = "excercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "logging>=0.4.9.6",
    "matplotlib>=3.10.3",
    "mypy>=1.16.0",
    "scipy>=1.15.3",
    "scipy-stubs>=1.15.3.0",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120
