[project]
name = "excercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diskcache>=5.6.3",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.3",
    "mypy>=1.16.0",
    "numpy>=2.2.6",
    "plotly-stubs>=0.0.5",
    "scipy>=1.15.3",
    "scipy-stubs>=1.15.3.0",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["ALL"]

ignore = [
    "E501",
    "N803", # Checks for argument names that do not follow the snake_case convention.
    "N806", # Checks for the use of non-lowercase variable names in functions.
    "S311", # Checks for uses of cryptographically weak pseudo-random number generators.
    "D100", # Missing module docstring
    "D203", # incorrect-blank-line-before-class
    "D212", # multi-line-summary-first-line
    ]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[[tool.mypy.overrides]]
module = "src/exercise5.py"
ignore_missing_imports = true
